--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskmasterVer2">
-        <activity android:name=".AddTask"/>
-        <activity android:name=".AllTasks"/>
-        <activity android:name=".LifeCycleActivity"/>
-        <activity android:name=".MainActivity"
-            android:exported="true" >
+        <activity android:name=".SettingsPage"></activity>
+        <activity android:name=".TaskDetailPage" />
+        <activity android:name=".AddTask" />
+        <activity android:name=".AllTasks" />
+        <activity android:name=".LifeCycleActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
