--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskmasterVer2">
-        <activity android:name=".SettingsPage"></activity>
+        <activity android:name=".SingleTask"></activity>
+        <activity android:name=".SettingsPage" />
         <activity android:name=".TaskDetailPage" />
         <activity android:name=".AddTask" />
         <activity android:name=".AllTasks" />
