--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskmasterVer2">
+        <activity android:name=".AddTheTask"/>
         <activity android:name=".SingleTask" />
         <activity android:name=".SettingsPage" />
         <activity android:name=".TaskDetailPage" />
-        <activity android:name=".AddTask" />
         <activity android:name=".AllTasks" />
         <activity android:name=".LifeCycleActivity" />
         <activity
